added header and styling

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.0"
+    "@svgr/webpack": "^5.5.0",
+    "file-loader": "^6.2.0",
+    "node-sass": "^6.0.0",
+    "url-loader": "^4.1.1"
   }
 }
