--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "dotenv": "^9.0.2",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
     "url-loader": "^4.1.1"
