--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^9.0.2",
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
+    "redux-logger": "^3.0.6",
     "url-loader": "^4.1.1"
   }
 }
