--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "file-loader": "^6.2.0",
     "node-sass": "^6.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
     "url-loader": "^4.1.1"
   }
 }
